--- a/src/main/resources/templates/constellationsFilter.html
+++ b/src/main/resources/templates/constellationsFilter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Constellation Logger month</title>
+    <title>Constellations</title>
 
     <style>
       hr {
@@ -35,7 +35,7 @@
 
         <div class="col text-right m-100">
             <a href="login" class="btn btn-outline-primary btn-lg">Login</a>
-            <a href="login" class="btn btn-outline-primary btn-lg">Create Account</a>
+            <a href="account" class="btn btn-outline-primary btn-lg">Account</a>
         </div>
 
 
@@ -130,7 +130,7 @@
                         <td th:text="${con.brightStar}">Month</td>
                         <td>
 
-                            <a href="#" th:href="@{/constellationDetail(abbr=${con.abbr})}">Details</a>
+                            <a href="#" th:href="@{/constellationDetail(abbr=${con.abbr})}" >Details</a>
 
                         </td>
                     </tr>
