--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -82,6 +82,8 @@
     <hr />
 </div>
 
+<!--add user-->
+
 <div class="container">
     <div class="text-center m-3">   <!--  col-[number] says the column location -->
         <span class="h3">Create New Account</span>
