--- a/src/main/resources/templates/constellationsFilter.html
+++ b/src/main/resources/templates/constellationsFilter.html
@@ -91,7 +91,7 @@
             </div>
 
 
-            <button type="submit" class="btn btn-primary ">Search</button>
+            <button type="submit" class="btn btn-primary ">Filter</button>
 
 
         </form>
