--- a/src/main/resources/templates/logsDetail.html
+++ b/src/main/resources/templates/logsDetail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Constellations</title>
+    <title>Logs</title>
 
     <style>
       hr {
@@ -18,14 +18,10 @@
         margin-left: auto;
         margin-right: auto;
         background-color: #b7d0e2;
+
       }
 
-      tr:hover {background-color: #D6EEEE;}
-
-
-
-
-
+       tr:hover {background-color: #D6EEEE;}
 
     </style>
 </head>
@@ -49,7 +45,6 @@
         </div>
     </div>
 
-    <!--  main menu-->
     <div class="row m-1">
         <div class="col text-center m-1">
             <a href="constellations" class="btn btn-outline-primary btn-lg">Constellations</a>
@@ -61,70 +56,38 @@
     <hr/>
 </div>
 
-<!--search options-->
-
-
-<!--display-->
-<div class="container">
-    <div class="text-center">
-        <div class="col text-center ">
-            <h2>Filter</h2>
-        </div>
-    </div>
-
-    <div class="text-center">
-        <form action="constellationsFilter" method="GET">
-            <div class="form-group row">
-                <label for="month" class="col-1 col-form-label">
-                    Month</label>
-                <div class="col-4">
-                    <input type="number" name="month"
-                           id="month" placeholder="(ENTER 1 - 12)" class="form-control "/>
-                </div>
-            </div>
-            <!--                for the lat part-->
-            <div class="form-group row">
-                <label for="lat" class="col-1 col-form-label">
-                    Latitude</label>
-                <div class="col-4">
-                    <input type="text" name="lat"
-                           id="lat" placeholder="(ENTER 90 to -90)" class="form-control "/>
-                </div>
-            </div>
-
-
-            <button type="submit" class="btn btn-primary ">Filter</button>
-
-
-        </form>
-    </div>
-    <hr/>
-</div>
+<!--banner for logs-->
 
 <div class="container">
 
 
     <div class="row m-2">
-        <!-- container for list -->
+        <!-- container for list to the left-->
         <div class="col text-left" style="text-align: left;">
-            <h2>Constellations</h2>
+            <h2>Logs</h2>
 
             <div class="col text-center m-3">
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th>Abbr</th>
-                        <th>Latin Name</th>
+                        <th>Date</th>
+                        <th>Latitude</th>
                         <th>Details</th>
+                        <th>Delete</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="con : ${constellations}">
-                        <td th:text="${con.abbr}">Abbr</td>
-                        <td th:text="${con.latinName}">Latin Name</td>
+                    <tr th:each="log : ${logs}">
+                        <td th:text="${log.logDate}">Date</td>
+                        <td th:text="${log.logLat}">Latitude</td>
                         <td>
 
-                            <a href="#" th:href="@{/constellationDetail(abbr=${con.abbr})}">Details</a>
+                            <a href="#" th:href="@{/logsDetail(abbr=${log.logId})}">Details</a>
+
+                        </td>
+                        <td>
+
+                            <a href="#" th:href="@{/deleteLog(abbr=${log.logId})}">Delete</a>
 
                         </td>
                     </tr>
@@ -134,6 +97,48 @@
 
 
         </div>
+
+    </div>
+
+
+</div>
+
+
+
+<div class="container">
+
+<!--    for details and to edit-->
+
+    <div class="row m-2">
+        <!-- container for editing -->
+<!--        <div class="col text-left" style="text-align: left;">-->
+<!--            <h2>Constellations</h2>-->
+
+<!--            <div class="col text-center m-3">-->
+<!--                <table class="table table-striped">-->
+<!--                    <thead>-->
+<!--                    <tr>-->
+<!--                        <th>Abbr</th>-->
+<!--                        <th>Latin Name</th>-->
+<!--                        <th>Details</th>-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+<!--                    <tbody>-->
+<!--                    <tr th:each="con : ${constellations}">-->
+<!--                        <td th:text="${con.abbr}">Abbr</td>-->
+<!--                        <td th:text="${con.latinName}">Latin Name</td>-->
+<!--                        <td>-->
+
+<!--                            <a href="#" th:href="@{/constellationDetail(abbr=${con.abbr})}">Details</a>-->
+
+<!--                        </td>-->
+<!--                    </tr>-->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </div>-->
+
+
+<!--        </div>-->
 
         <!-- container for details -->
         <div class="col text-left " style="text-align: left;">
@@ -174,6 +179,63 @@
 </div>
 
 
+
+
+<!--New Log-->
+
+<div class="container">
+    <hr />
+    <div class="text-center m-3">   <!--  col-[number] says the column location -->
+        <span class="h3">Create New Log</span>
+    </div>
+    <div class="text-center m-3" >
+        <!--            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site-->
+        <form action="createLog" method="POST">
+            <div class="form-group row">
+                <label for="logDate" class="col-3 col-form-label">
+                    Date</label>
+                <div class="col-9">
+                    <input type="date" name="logDate"
+                           id="logDate" placeholder="Date"  class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="logLat" class="col-3 col-form-label">
+                    Latitude</label>
+                <div class="col-9">
+                    <input type="text" name="logLat"
+                           id="logLat" placeholder="Latitude" class="form-control"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="constellationList" class="col-3 col-form-label">
+                    Constellations</label>
+                <div class="col-9">
+                    <select multiple id="constellationList" name="abbr"
+                            class="form-control" >
+                        <option th:each="con : ${constellations}"
+                                th:value="${con.abbr}"
+                                th:text="${con.abbr + ' - ' + con.latinName}">
+                            Constellations</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="extraInfo" class="col-3 col-form-label">
+                    Extra Info</label>
+                <div class="col-9">
+          <textarea type="text" name="extraInfo"
+                    id="extraInfo" placeholder="Extra Info" class="form-control"></textarea>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary ">Create Log</button>
+        </form>
+    </div>
+    <hr />
+</div>
+
+
 <!-- End main body -->
 
 <!-- Optional JavaScript -->
@@ -189,4 +251,5 @@
         crossorigin="anonymous"></script>
 </body>
 </html>;
+
 
