added tests for log dao

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -32,6 +32,7 @@
         <div class="col text-right m-100">
             <a href="login" class="btn btn-outline-primary btn-lg">Login</a>
             <a href="account" class="btn btn-outline-primary btn-lg">Account</a>
+            <a href="logout" class="btn btn-outline-primary btn-lg">Logout</a>
         </div>
 
 
