--- a/src/main/resources/templates/constellationDetail.html
+++ b/src/main/resources/templates/constellationDetail.html
@@ -82,7 +82,7 @@
                     Month</label>
                 <div class="col-4">
                     <input type="number" name="month"
-                           id="month" placeholder="(ENTER 1 - 12)" class="form-control "/>
+                           id="month" placeholder="(ENTER 1 - 12)" class="form-control "  th:value="${monthFiltered}" />
                 </div>
             </div>
             <!--                for the lat part-->
@@ -91,11 +91,11 @@
                     Latitude</label>
                 <div class="col-4">
                     <input type="text" name="lat"
-                           id="lat" placeholder="(ENTER 90 to -90)" class="form-control "/>
+                           id="lat" placeholder="(ENTER 90 to -90)" class="form-control" th:value="${latFiltered}"/>
                 </div>
             </div>
 
-
+            <a href="constellations" class="btn btn-primary">Clear</a>
             <button type="submit" class="btn btn-primary ">Filter</button>
 
 
