--- a/src/main/resources/templates/constellations.html
+++ b/src/main/resources/templates/constellations.html
@@ -78,7 +78,7 @@
                     Month</label>
                 <div class="col-4">
                     <input type="number" name="month"
-                           id="month" placeholder="(ENTER 1 - 12)" class="form-control "/>
+                           id="month" placeholder="(ENTER 1 - 12)" class="form-control" th:value="${monthFiltered}" />
                 </div>
             </div>
                 <!--                for the lat part-->
@@ -87,11 +87,12 @@
                     Latitude</label>
                 <div class="col-4">
                     <input type="text" name="lat"
-                           id="lat" placeholder="(ENTER 90 to -90)" class="form-control "/>
+                           id="lat" placeholder="(ENTER 90 to -90)" class="form-control" th:value="${latFiltered}" />
                 </div>
             </div>
 
 
+            <a href="constellations" class="btn btn-primary">Clear</a>
             <button type="submit" class="btn btn-primary ">Filter</button>
 
 
