--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -76,7 +76,7 @@
                 Username</label>
             <div class="col-9">
                 <input type="text" name="username"
-                       id="username" placeholder="Username"  class="form-control"/>
+                       id="username" placeholder="Username"  class="form-control" required autofocus/>
             </div>
         </div>
         <div class="form-group row">
@@ -84,7 +84,7 @@
                 Password</label>
             <div class="col-9">
                 <input type="password" name="password"
-                       id="password" placeholder="Password" class="form-control"/>
+                       id="password" placeholder="Password" class="form-control" required/>
             </div>
         </div>
         <button type="submit" class="btn btn-primary ">Login</button>
