--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -121,11 +121,11 @@
     <!--            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site-->
     <form action="createLog" method="POST">
       <div class="form-group row">
-        <label for="logDate" class="col-3 col-form-label">
+        <label for="logDate" class="col-3 col-form-label" >
           Date</label>
         <div class="col-9">
           <input type="date" name="logDate"
-                 id="logDate" placeholder="Date"  class="form-control"/>
+                 id="logDate" placeholder="Date"  class="form-control" required/>
         </div>
       </div>
       <div class="form-group row">
@@ -133,7 +133,7 @@
           Latitude</label>
         <div class="col-9">
           <input type="text" name="logLat"
-                 id="logLat" placeholder="Latitude" class="form-control"/>
+                 id="logLat" placeholder="Latitude" class="form-control" required/>
         </div>
       </div>
       <div class="form-group row">
