--- a/src/main/resources/templates/logsDetail.html
+++ b/src/main/resources/templates/logsDetail.html
@@ -128,13 +128,13 @@
 
             <div class="text-center m-3" style="text-align: left;">
                 <!--            <div class="col-7 text-center m-3" style="display:none;"> to hide it from the site-->
-                <form action="logsDetail" method="POST">
+                <form action="editLog" method="POST">
                     <div class="form-group row">
                         <label for="editLogDate" class="col-3 col-form-label">
                             Date</label>
                         <div class="col-9">
                             <input type="date" name="editLogDate"
-                                   id="editLogDate" placeholder="Date" class="form-control"/>
+                                   id="editLogDate" placeholder="Date" class="form-control" th:value="${log.logDate}" required/>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -142,7 +142,7 @@
                             Latitude</label>
                         <div class="col-9">
                             <input type="text" name="editLogLat"
-                                   id="editLogLat" placeholder="Latitude" class="form-control"/>
+                                   id="editLogLat" placeholder="Latitude" class="form-control" th:value="${log.logLat}" required/>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -153,7 +153,8 @@
                                     class="form-control">
                                 <option th:each="con : ${constellations}"
                                         th:value="${con.abbr}"
-                                        th:text="${con.abbr + ' - ' + con.latinName}">
+                                        th:text="${con.abbr + ' - ' + con.latinName}"
+                                        th:selected="${log.constellationList.contains(con)}">
                                     Constellations
                                 </option>
                             </select>
@@ -165,7 +166,7 @@
                             Extra Info</label>
                         <div class="col-9">
                         <textarea type="text" name="editExtraInfo"
-                            id="editExtraInfo" placeholder="Extra Info" class="form-control"></textarea>
+                            id="editExtraInfo" placeholder="Extra Info" class="form-control" th:value="${log.extraInfo}"></textarea>
                         </div>
                     </div>
                     <input type="hidden" name="logId" th:value="${log.logId}"/>
@@ -233,7 +234,7 @@
                     Date</label>
                 <div class="col-9">
                     <input type="date" name="logDate"
-                           id="logDate" placeholder="Date"  class="form-control"/>
+                           id="logDate" placeholder="Date"  class="form-control" required/>
                 </div>
             </div>
             <div class="form-group row">
@@ -241,7 +242,7 @@
                     Latitude</label>
                 <div class="col-9">
                     <input type="text" name="logLat"
-                           id="logLat" placeholder="Latitude" class="form-control"/>
+                           id="logLat" placeholder="Latitude" class="form-control" required/>
                 </div>
             </div>
             <div class="form-group row">
